<resources>
    <string name="app_name">Consulta controle</string>
    <string name="app_addClinic">Cadastre uma clínica/hospital</string>
    <string name="app_addDoctor">Cadastre um médico</string>
    <string name="app_save">Gravar</string>
    <string name="app_search">Buscar</string>

    <string name="app_clinicName">Digite o nome da clínica</string>
    <string name="app_clinicZipCode">Digite o cep da clínica</string>
    <string name="app_clinicStreet">rua</string>
    <string name="app_clinicDistrict">bairro</string>
    <string name="app_clinicCity">cidade</string>
    <string name="app_clinicPhone">Digite telefone da clínica</string>
    <string name="app_clinicSaved">Clínica Cadastrada</string>

    <string name="app_doctorName">Digite o nome do médico</string>
    <string name="app_doctorArea">Digite a especialidade do médido</string>
    <string name="app_doctorClinic">Escolha clínica</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>